--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.18.4",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-theme-blog": "^1.2.3",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
     "react-typography": "^0.16.19",
