--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "gatsby": "^2.18.4",
+    "gatsby-cli": "^2.8.22",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-theme-blog": "^1.2.3",
     "react": "^16.12.0",
